no-state color for legend

--- a/sass/app/_timeline.scss
+++ b/sass/app/_timeline.scss
@@ -283,6 +283,10 @@
   margin-bottom: -5px;
 }
 
+.legenda-row .legenda-no-state .square {
+  background-color: #ececec;
+}
+
 .legenda-row .legenda-state-available .square {
   background-color: #6cad6c;
 }
