--- a/war/css/app.css
+++ b/war/css/app.css
@@ -1434,6 +1434,10 @@ ul.nav-tabs-app li span.entypo {
   margin-bottom: -5px;
 }
 
+.legenda-row .legenda-no-state .square {
+  background-color: #ececec;
+}
+
 .legenda-row .legenda-state-available .square {
   background-color: #6cad6c;
 }
