style fixes for member bars

--- a/sass/app/_timeline.scss
+++ b/sass/app/_timeline.scss
@@ -211,6 +211,17 @@
           background-repeat: repeat-x;
           filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff8a85c7', endColorstr='#ff8a85c7', GradientType=0);
         }
+
+        .bar-NoPlanning {
+          background-color: #ececec;
+          background-image: -moz-linear-gradient(top, #ececec, #ececec);
+          background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ececec), to(#ececec));
+          background-image: -webkit-linear-gradient(top, #ececec, #ececec);
+          background-image: -o-linear-gradient(top, #ececec, #ececec);
+          background-image: linear-gradient(to bottom, #ececec, #ececec);
+          background-repeat: repeat-x;
+          filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffececec', endColorstr='#ffececec', GradientType=0);
+        }
       }
 
     }
@@ -284,7 +295,7 @@
 }
 
 .legenda-row .legenda-no-state .square {
-  background-color: #ececec;
+  background-color: #6cad6c;
 }
 
 .legenda-row .legenda-state-available .square {
