--- a/war/js/views/settings.html
+++ b/war/js/views/settings.html
@@ -84,6 +84,8 @@
               </select>
             </div>
 
+            <!--<pre><small>{{settings.app.group}}</small></pre>-->
+
             <br>
 
             <div class="form-actions">
