--- a/war/js/views/login.html
+++ b/war/js/views/login.html
@@ -1,8 +1,6 @@
-<download-mobile-app
-  ng-show="browser.mobile && browser.screen.width < 768"
-  align="center"></download-mobile-app>
-
 <div id="welcome">
+
+  <download-mobile-app ng-show="browser.mobile && browser.screen.width < 768"></download-mobile-app>
 
 	<!-- preloader -->
 	<div id="preloader">
@@ -139,8 +137,6 @@
 	</div>
 	<!-- end change pass -->
 
-</div>
+  <download-mobile-app ng-hide="browser.mobile && browser.screen.width < 768"></download-mobile-app>
 
-<download-mobile-app
-  ng-hide="browser.mobile && browser.screen.width < 768"
-  align="center"></download-mobile-app>
+</div>
