pagerId field added to new member form

--- a/war/js/views/groups.html
+++ b/war/js/views/groups.html
@@ -281,6 +281,15 @@
             </div>
 
             <div class="control-group">
+              <label class="control-label">{{ui.profile.pagerId}}</label>
+              <div class="controls">
+                <input  type="text"
+                        class="span5"
+                        ng-model="memberForm.pagerId">
+              </div>
+            </div>
+
+            <div class="control-group">
               <label class="control-label">{{ui.groups.address}}</label>
               <div class="controls">
                 <input  type="text"
