changed paths for manual documents

--- a/war/js/views/help.html
+++ b/war/js/views/help.html
@@ -2,7 +2,8 @@
   <h2>{{ui.help.header}}</h2>
 
   <div class="btn-group pull-right">
-    <a href="../docs/manual{{(config.profile.meta=='knrm') && '-knrm' || ''}}.pdf"
+    <a
+      href="http://static.ask-cs.com/standby/Handleiding%20Standby{{(config.profile.meta=='knrm') && ' KNRM' || ''}}.pdf"
        target="_blank"
        class="btn btn-success">
       <i class="icon-book icon-white"></i>
