Change the color of the slim alarmeren to red if not assigned

--- a/sass/app/_dashboard.scss
+++ b/sass/app/_dashboard.scss
@@ -464,6 +464,12 @@
           }
         }
 
+
+        .sa-icon-not-assigned {
+          // background-color: #253943;
+          background-color: #d34545;
+        }
+
         .sa-icon-driver {
           // background-color: #253943;
           background-color: #f6e500;
